// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PersonalityArchetypeSkills renders component 1`] = `
<div
  className="container"
>
  <ul
    className="tabs"
  >
    <div
      className="featured"
    >
      featured_skill, [object Object]
    </div>
    <li
      className="active"
    >
      <button
        onClick={[Function]}
        type="button"
      >
        <img
          alt="skill_name_for_working_from_home, [object Object]"
          className="image"
          src="https://cdn.traitify.com/images/big5_home.png"
        />
        <div
          className="name"
        >
          skill_name_for_working_from_home, [object Object]
        </div>
      </button>
    </li>
    <li
      className=""
    >
      <button
        onClick={[Function]}
        type="button"
      >
        <img
          alt="skill_name_for_dealing_with_stress, [object Object]"
          className="image"
          src="https://cdn.traitify.com/images/big5_stress.png"
        />
        <div
          className="name"
        >
          skill_name_for_dealing_with_stress, [object Object]
        </div>
      </button>
    </li>
    <li
      className=""
    >
      <button
        onClick={[Function]}
        type="button"
      >
        <img
          alt="skill_name_for_communication, [object Object]"
          className="image"
          src="https://cdn.traitify.com/images/big5_communication.png"
        />
        <div
          className="name"
        >
          skill_name_for_communication, [object Object]
        </div>
      </button>
    </li>
    <li
      className=""
    >
      <button
        onClick={[Function]}
        type="button"
      >
        <img
          alt="skill_name_for_teamwork, [object Object]"
          className="image"
          src="https://cdn.traitify.com/images/big5_teamwork.png"
        />
        <div
          className="name"
        >
          skill_name_for_teamwork, [object Object]
        </div>
      </button>
    </li>
    <li
      className=""
    >
      <button
        onClick={[Function]}
        type="button"
      >
        <img
          alt="skill_name_for_habits, [object Object]"
          className="image"
          src="https://cdn.traitify.com/images/big5_motivation.png"
        />
        <div
          className="name"
        >
          skill_name_for_habits, [object Object]
        </div>
      </button>
    </li>
  </ul>
  <div
    className="tab"
  >
    <div
      className="formSelect"
    >
      <select
        onChange={[Function]}
        value="working_from_home"
      >
        <option
          value="working_from_home"
        >
          skill_name_for_working_from_home, [object Object]
        </option>
        <option
          value="dealing_with_stress"
        >
          skill_name_for_dealing_with_stress, [object Object]
        </option>
        <option
          value="communication"
        >
          skill_name_for_communication, [object Object]
        </option>
        <option
          value="teamwork"
        >
          skill_name_for_teamwork, [object Object]
        </option>
        <option
          value="habits"
        >
          skill_name_for_habits, [object Object]
        </option>
      </select>
    </div>
    <h3>
      skill_heading_for_working_from_home, [object Object]
    </h3>
    <ul
      className="list"
    >
      <li
        style={
          Object {
            "background": "rgba(41,183,112,0.1)",
          }
        }
      >
        WFH Tip for Agreeableness
      </li>
      <li
        style={
          Object {
            "background": "rgba(255,204,59,0.1)",
          }
        }
      >
        WFH Tip for Extraversion
      </li>
      <li
        style={
          Object {
            "background": "rgba(249,139,28,0.1)",
          }
        }
      >
        WFH Tip for Conscientiousness
      </li>
      <li
        style={
          Object {
            "background": "rgba(66,176,219,0.1)",
          }
        }
      >
        WFH Tip for Openness
      </li>
      <li
        style={
          Object {
            "background": "rgba(239,97,94,0.1)",
          }
        }
      >
        WFH Tip for Emotional Stability
      </li>
    </ul>
  </div>
</div>
`;

exports[`PersonalityArchetypeSkills renders component with available types 1`] = `
<div
  className="container"
>
  <ul
    className="tabs"
  >
    <div
      className="featured"
    >
      featured_skill, [object Object]
    </div>
    <li
      className="active"
    >
      <button
        onClick={[Function]}
        type="button"
      >
        <img
          alt="skill_name_for_dealing_with_stress, [object Object]"
          className="image"
          src="https://cdn.traitify.com/images/big5_stress.png"
        />
        <div
          className="name"
        >
          skill_name_for_dealing_with_stress, [object Object]
        </div>
      </button>
    </li>
    <li
      className=""
    >
      <button
        onClick={[Function]}
        type="button"
      >
        <img
          alt="skill_name_for_communication, [object Object]"
          className="image"
          src="https://cdn.traitify.com/images/big5_communication.png"
        />
        <div
          className="name"
        >
          skill_name_for_communication, [object Object]
        </div>
      </button>
    </li>
    <li
      className=""
    >
      <button
        onClick={[Function]}
        type="button"
      >
        <img
          alt="skill_name_for_teamwork, [object Object]"
          className="image"
          src="https://cdn.traitify.com/images/big5_teamwork.png"
        />
        <div
          className="name"
        >
          skill_name_for_teamwork, [object Object]
        </div>
      </button>
    </li>
    <li
      className=""
    >
      <button
        onClick={[Function]}
        type="button"
      >
        <img
          alt="skill_name_for_habits, [object Object]"
          className="image"
          src="https://cdn.traitify.com/images/big5_motivation.png"
        />
        <div
          className="name"
        >
          skill_name_for_habits, [object Object]
        </div>
      </button>
    </li>
  </ul>
  <div
    className="tab"
  >
    <div
      className="formSelect"
    >
      <select
        onChange={[Function]}
        value="dealing_with_stress"
      >
        <option
          value="dealing_with_stress"
        >
          skill_name_for_dealing_with_stress, [object Object]
        </option>
        <option
          value="communication"
        >
          skill_name_for_communication, [object Object]
        </option>
        <option
          value="teamwork"
        >
          skill_name_for_teamwork, [object Object]
        </option>
        <option
          value="habits"
        >
          skill_name_for_habits, [object Object]
        </option>
      </select>
    </div>
    <h3>
      skill_heading_for_dealing_with_stress, [object Object]
    </h3>
    <ul
      className="list"
    >
      <li
        style={
          Object {
            "background": "rgba(41,183,112,0.1)",
          }
        }
      >
        DWS Tip for Agreeableness
      </li>
      <li
        style={
          Object {
            "background": "rgba(255,204,59,0.1)",
          }
        }
      >
        DWS Tip for Extraversion
      </li>
      <li
        style={
          Object {
            "background": "rgba(249,139,28,0.1)",
          }
        }
      >
        DWS Tip for Conscientiousness
      </li>
      <li
        style={
          Object {
            "background": "rgba(66,176,219,0.1)",
          }
        }
      >
        DWS Tip for Openness
      </li>
      <li
        style={
          Object {
            "background": "rgba(239,97,94,0.1)",
          }
        }
      >
        DWS Tip for Emotional Stability
      </li>
    </ul>
  </div>
</div>
`;

exports[`PersonalityArchetypeSkills renders component with enabled types 1`] = `
<div
  className="container"
>
  <ul
    className="tabs"
  >
    <div
      className="featured"
    >
      featured_skill, [object Object]
    </div>
    <li
      className="active"
    >
      <button
        onClick={[Function]}
        type="button"
      >
        <img
          alt="skill_name_for_dealing_with_stress, [object Object]"
          className="image"
          src="https://cdn.traitify.com/images/big5_stress.png"
        />
        <div
          className="name"
        >
          skill_name_for_dealing_with_stress, [object Object]
        </div>
      </button>
    </li>
    <li
      className=""
    >
      <button
        onClick={[Function]}
        type="button"
      >
        <img
          alt="skill_name_for_communication, [object Object]"
          className="image"
          src="https://cdn.traitify.com/images/big5_communication.png"
        />
        <div
          className="name"
        >
          skill_name_for_communication, [object Object]
        </div>
      </button>
    </li>
    <li
      className=""
    >
      <button
        onClick={[Function]}
        type="button"
      >
        <img
          alt="skill_name_for_teamwork, [object Object]"
          className="image"
          src="https://cdn.traitify.com/images/big5_teamwork.png"
        />
        <div
          className="name"
        >
          skill_name_for_teamwork, [object Object]
        </div>
      </button>
    </li>
    <li
      className=""
    >
      <button
        onClick={[Function]}
        type="button"
      >
        <img
          alt="skill_name_for_habits, [object Object]"
          className="image"
          src="https://cdn.traitify.com/images/big5_motivation.png"
        />
        <div
          className="name"
        >
          skill_name_for_habits, [object Object]
        </div>
      </button>
    </li>
  </ul>
  <div
    className="tab"
  >
    <div
      className="formSelect"
    >
      <select
        onChange={[Function]}
        value="dealing_with_stress"
      >
        <option
          value="dealing_with_stress"
        >
          skill_name_for_dealing_with_stress, [object Object]
        </option>
        <option
          value="communication"
        >
          skill_name_for_communication, [object Object]
        </option>
        <option
          value="teamwork"
        >
          skill_name_for_teamwork, [object Object]
        </option>
        <option
          value="habits"
        >
          skill_name_for_habits, [object Object]
        </option>
      </select>
    </div>
    <h3>
      skill_heading_for_dealing_with_stress, [object Object]
    </h3>
    <ul
      className="list"
    >
      <li
        style={
          Object {
            "background": "rgba(41,183,112,0.1)",
          }
        }
      >
        DWS Tip for Agreeableness
      </li>
      <li
        style={
          Object {
            "background": "rgba(255,204,59,0.1)",
          }
        }
      >
        DWS Tip for Extraversion
      </li>
      <li
        style={
          Object {
            "background": "rgba(249,139,28,0.1)",
          }
        }
      >
        DWS Tip for Conscientiousness
      </li>
      <li
        style={
          Object {
            "background": "rgba(66,176,219,0.1)",
          }
        }
      >
        DWS Tip for Openness
      </li>
      <li
        style={
          Object {
            "background": "rgba(239,97,94,0.1)",
          }
        }
      >
        DWS Tip for Emotional Stability
      </li>
    </ul>
  </div>
</div>
`;

exports[`PersonalityArchetypeSkills renders new type from clicking button 1`] = `
<div
  className="container"
>
  <ul
    className="tabs"
  >
    <div
      className="featured"
    >
      featured_skill, [object Object]
    </div>
    <li
      className=""
    >
      <button
        onClick={[Function]}
        type="button"
      >
        <img
          alt="skill_name_for_working_from_home, [object Object]"
          className="image"
          src="https://cdn.traitify.com/images/big5_home.png"
        />
        <div
          className="name"
        >
          skill_name_for_working_from_home, [object Object]
        </div>
      </button>
    </li>
    <li
      className="active"
    >
      <button
        onClick={[Function]}
        type="button"
      >
        <img
          alt="skill_name_for_dealing_with_stress, [object Object]"
          className="image"
          src="https://cdn.traitify.com/images/big5_stress.png"
        />
        <div
          className="name"
        >
          skill_name_for_dealing_with_stress, [object Object]
        </div>
      </button>
    </li>
    <li
      className=""
    >
      <button
        onClick={[Function]}
        type="button"
      >
        <img
          alt="skill_name_for_communication, [object Object]"
          className="image"
          src="https://cdn.traitify.com/images/big5_communication.png"
        />
        <div
          className="name"
        >
          skill_name_for_communication, [object Object]
        </div>
      </button>
    </li>
    <li
      className=""
    >
      <button
        onClick={[Function]}
        type="button"
      >
        <img
          alt="skill_name_for_teamwork, [object Object]"
          className="image"
          src="https://cdn.traitify.com/images/big5_teamwork.png"
        />
        <div
          className="name"
        >
          skill_name_for_teamwork, [object Object]
        </div>
      </button>
    </li>
    <li
      className=""
    >
      <button
        onClick={[Function]}
        type="button"
      >
        <img
          alt="skill_name_for_habits, [object Object]"
          className="image"
          src="https://cdn.traitify.com/images/big5_motivation.png"
        />
        <div
          className="name"
        >
          skill_name_for_habits, [object Object]
        </div>
      </button>
    </li>
  </ul>
  <div
    className="tab"
  >
    <div
      className="formSelect"
    >
      <select
        onChange={[Function]}
        value="dealing_with_stress"
      >
        <option
          value="working_from_home"
        >
          skill_name_for_working_from_home, [object Object]
        </option>
        <option
          value="dealing_with_stress"
        >
          skill_name_for_dealing_with_stress, [object Object]
        </option>
        <option
          value="communication"
        >
          skill_name_for_communication, [object Object]
        </option>
        <option
          value="teamwork"
        >
          skill_name_for_teamwork, [object Object]
        </option>
        <option
          value="habits"
        >
          skill_name_for_habits, [object Object]
        </option>
      </select>
    </div>
    <h3>
      skill_heading_for_dealing_with_stress, [object Object]
    </h3>
    <ul
      className="list"
    >
      <li
        style={
          Object {
            "background": "rgba(41,183,112,0.1)",
          }
        }
      >
        DWS Tip for Agreeableness
      </li>
      <li
        style={
          Object {
            "background": "rgba(255,204,59,0.1)",
          }
        }
      >
        DWS Tip for Extraversion
      </li>
      <li
        style={
          Object {
            "background": "rgba(249,139,28,0.1)",
          }
        }
      >
        DWS Tip for Conscientiousness
      </li>
      <li
        style={
          Object {
            "background": "rgba(66,176,219,0.1)",
          }
        }
      >
        DWS Tip for Openness
      </li>
      <li
        style={
          Object {
            "background": "rgba(239,97,94,0.1)",
          }
        }
      >
        DWS Tip for Emotional Stability
      </li>
    </ul>
  </div>
</div>
`;

exports[`PersonalityArchetypeSkills renders new type from selecting option 1`] = `
<div
  className="container"
>
  <ul
    className="tabs"
  >
    <div
      className="featured"
    >
      featured_skill, [object Object]
    </div>
    <li
      className=""
    >
      <button
        onClick={[Function]}
        type="button"
      >
        <img
          alt="skill_name_for_working_from_home, [object Object]"
          className="image"
          src="https://cdn.traitify.com/images/big5_home.png"
        />
        <div
          className="name"
        >
          skill_name_for_working_from_home, [object Object]
        </div>
      </button>
    </li>
    <li
      className="active"
    >
      <button
        onClick={[Function]}
        type="button"
      >
        <img
          alt="skill_name_for_dealing_with_stress, [object Object]"
          className="image"
          src="https://cdn.traitify.com/images/big5_stress.png"
        />
        <div
          className="name"
        >
          skill_name_for_dealing_with_stress, [object Object]
        </div>
      </button>
    </li>
    <li
      className=""
    >
      <button
        onClick={[Function]}
        type="button"
      >
        <img
          alt="skill_name_for_communication, [object Object]"
          className="image"
          src="https://cdn.traitify.com/images/big5_communication.png"
        />
        <div
          className="name"
        >
          skill_name_for_communication, [object Object]
        </div>
      </button>
    </li>
    <li
      className=""
    >
      <button
        onClick={[Function]}
        type="button"
      >
        <img
          alt="skill_name_for_teamwork, [object Object]"
          className="image"
          src="https://cdn.traitify.com/images/big5_teamwork.png"
        />
        <div
          className="name"
        >
          skill_name_for_teamwork, [object Object]
        </div>
      </button>
    </li>
    <li
      className=""
    >
      <button
        onClick={[Function]}
        type="button"
      >
        <img
          alt="skill_name_for_habits, [object Object]"
          className="image"
          src="https://cdn.traitify.com/images/big5_motivation.png"
        />
        <div
          className="name"
        >
          skill_name_for_habits, [object Object]
        </div>
      </button>
    </li>
  </ul>
  <div
    className="tab"
  >
    <div
      className="formSelect"
    >
      <select
        onChange={[Function]}
        value="dealing_with_stress"
      >
        <option
          value="working_from_home"
        >
          skill_name_for_working_from_home, [object Object]
        </option>
        <option
          value="dealing_with_stress"
        >
          skill_name_for_dealing_with_stress, [object Object]
        </option>
        <option
          value="communication"
        >
          skill_name_for_communication, [object Object]
        </option>
        <option
          value="teamwork"
        >
          skill_name_for_teamwork, [object Object]
        </option>
        <option
          value="habits"
        >
          skill_name_for_habits, [object Object]
        </option>
      </select>
    </div>
    <h3>
      skill_heading_for_dealing_with_stress, [object Object]
    </h3>
    <ul
      className="list"
    >
      <li
        style={
          Object {
            "background": "rgba(41,183,112,0.1)",
          }
        }
      >
        DWS Tip for Agreeableness
      </li>
      <li
        style={
          Object {
            "background": "rgba(255,204,59,0.1)",
          }
        }
      >
        DWS Tip for Extraversion
      </li>
      <li
        style={
          Object {
            "background": "rgba(249,139,28,0.1)",
          }
        }
      >
        DWS Tip for Conscientiousness
      </li>
      <li
        style={
          Object {
            "background": "rgba(66,176,219,0.1)",
          }
        }
      >
        DWS Tip for Openness
      </li>
      <li
        style={
          Object {
            "background": "rgba(239,97,94,0.1)",
          }
        }
      >
        DWS Tip for Emotional Stability
      </li>
    </ul>
  </div>
</div>
`;

exports[`PersonalityArchetypeSkills renders nothing if disabled 1`] = `null`;

exports[`PersonalityArchetypeSkills renders nothing if no archetype 1`] = `null`;

exports[`PersonalityArchetypeSkills renders nothing if no skills 1`] = `null`;

exports[`PersonalityArchetypeSkills renders nothing if results not ready 1`] = `null`;
